<resources>
    <string name="app_name">Insane</string>
    <string name="enter_mobile_number">Phone Number</string>
    <string name="enter_name">Name</string>
    <string name="request">Create Account</string>
    <string name="create_pin_text">Looks Like you are new signUp, please enter 4-digit PIN</string>
    <string name="pin">Create PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_enter">Enter 4-digit PIN</string>
    <string name="enter_4_digit_pin_to_continue">Enter 4-digit pin to continue</string>
    <string name="auto_read">Waiting to read OTP …</string>
    <string name="enter_code">Enter OTP manually</string>
    <string name="enter_otp">Enter OTP received</string>
    <string name="upload">Upload</string>
    <string name="write_caption">Write Caption</string>
    <string name="upload_successful">Upload Successful</string>
    <string name="joined_on">Joined On:</string>
    <string name="deactivate">Deactivate</string>
    <string name="activate">Activate</string>

    <!-- Sign In -->
    <string name="signout">Log out</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="people">People</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">post</string>
    <string name="following">Following</string>
    <string name="follower">Followers</string>
    <string name="follow">follow</string>
    <string name="follow_bold">FOLLOW</string>
    <string name="follow_cancel">Unfollow</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked your post</string>
    <string name="alarm_comment">Commented:</string>
    <string name="alarm_follow">Started following you</string>

    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="share_photo">Share photo</string>
    <string name="close">Close</string>
    <string name="download">Download</string>

    <!-- Comment -->

    <!-- Add Photo -->
    <string name="upload_fail">Upload failed</string>
    <string name="guest_count">%1$s Guests</string>
    <string name="likes_count">%1$s Likes</string>
    <string name="comments_count">%1$s Comments</string>
    <string name="sort">Sort</string>
    <string name="guest">Guest</string>
    <string name="message_alarm">says: %1$s</string>
    <string name="message_liked">liked this photo</string>
    <string name="message_ala">commented on this photo</string>

    <!-- Toolbar -->

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_main1">MainActivity1</string>
    <string name="title_home">Home</string>
    <string name="title_activity_tab1">TabActivity1</string>
    <string name="sharing_memories">Sharing Memories</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="comment">Comment</string>
    <string name="change">Change Phone# (%1$s)</string>
    <string name="received_please">Thank you.</string>
    <string name="check_status">Check Status</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="change_details">Change Details</string>
    <string name="not_approved">Oh Sorry, Not Approved yet.</string>

    <string name="otp_title">Waiting to read OTP…</string>
    <string name="otp_msg">Please do not close or press back button</string>
    <string name="ppl_title">Please wait…</string>
    <string name="ppl_msg">This may take a few moments</string>
    <string name="rate_title">Rate this app</string>
    <string name="rate_msg">If you like our app, please take moment rate in play store</string>
    <string name="rate_pos">Rate</string>
    <string name="rate_neg">No, thanks</string>
    <string name="logout_pos">Log Out</string>
    <string name="delete_pos">Delete</string>
    <string name="logout_neg">Cancel</string>

    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="del_msg">Are you sure you want to delete this post?</string>
    <string name="type_your_feedback_here">Type your feedback here…</string>
    <string name="total_coins">Total Coins</string>

    <string name="retry">Retry</string>

    <string name="progress_uploading">Uploading Image…</string>
    <string name="upload_success">Image Upload finished Successfully! 🚀</string>
    <string name="upload_failure">Image Uploading failed to upload the image 🚧. Please try to upload the image again.</string>


    <string name="new_deal_success">The new image is added successfully 👍.</string>
    <string name="new_deal_failure">The image has failed to be added 🚧.</string>
    <string name="prompt_already_login">%1$s already signed in!</string>
    <string name="prompt_failed_to_login">Failed to login. Reason: %1$s</string>
    <string name="prompt_sign_out">Sign out?</string>

    <string name="prompt_add_image">Add Image</string>
    <string name="prompt_change_image">Change Image</string>
    <string name="hint_title">Title</string>
    <string name="hint_price">Price</string>
    <string name="hint_description">Description</string>


</resources>
