<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/people" />
    <item
        android:id="@+id/action_add_photo"
        android:enabled="true"
        android:icon="@drawable/ic_add_a_photo_black_24dp"
        android:title="@string/gallery" />
    <item
        android:id="@+id/action_favorite_alarm"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/account" />
</menu>