<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_liked_post"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"/>

    <item
        android:id="@+id/navigation_new_post"
        android:icon="@drawable/ic_add_a_photo_black_24dp"
        android:title="@string/gallery"/>

    <item
        android:id="@+id/navigation_all_post"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/navigation_others"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/account"/>

</menu>
