<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tvDetBotClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/close"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tvDetBotShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetBotClose"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/share_photo"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvDetBotDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetBotShare"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/download"
        android:textSize="16sp" />
</RelativeLayout>