<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".prelogin.SignUpReqFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ak.sh.ay.oblique.ObliqueView
            android:id="@+id/obliqueView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/pic_2"
            app:ending_slant_angle="0"
            app:starting_slant_angle="10"
            app:type="image" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
           android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:inputType="textCapWords"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/selector_button"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/request"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:enabled="false"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvphoneChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:text="@string/change"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <ProgressBar
            android:id="@+id/prEnterName"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

    </FrameLayout>

</layout>