<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ak.sh.ay.oblique.ObliqueView
            android:id="@+id/obliqueView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_chat_black"
            app:ending_slant_angle="0"
            app:starting_slant_angle="10"
            app:type="image" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".modules.login.VerifyPhoneFragment">

            <ProgressBar
                android:id="@+id/prVerify"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/auto_read"
                android:textSize="32sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/enter_code"
                android:textColor="@color/grey_500"
                android:visibility="gone"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_otp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:visibility="gone" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>

</layout>
